fixed gallery title spacing

--- a/css/default.css
+++ b/css/default.css
@@ -120,7 +120,7 @@ header{
 		text-align: justify;
 		font-size: 20px;
 		padding: 0px 10% 50px 10%;
-		margin: 50px;
+		margin: 2em;
 		border-bottom: 5px dashed white;
 	}
 
